# BlackJack

./: README.md  brain.py  config.toml  pyproject.toml  reader.py
bot/: brain.py  reader.py
data/: hard_total.csv  soft_total.csv
myenv/src/: actor.py  card.py  dealer.py  logic.py  main.py  player.py
src/: actor.py  config.py  dealer.py  gamestate.py  logic.py  main.py  player.py  ui.py
