[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-cli"
version = "1.0.0"
description = "A simple CLI blackjack bot made with Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Jiwon Kang", email = "kangjw0306@gmail.com"}
]
keywords = ["blackjack", "cli", "bot", "card-game", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://github.com/kangjw0306/BlackJack"
Repository = "https://github.com/kangjw0306/BlackJack"
Issues = "https://github.com/kangjw0306/BlackJack/issues"

[project.scripts]
blackjack-bot = "brain:main"
blackjack-game = "src.main:main"
